leptos_macro/tests/view/10_generic_prop_wrong_type_short_form.stderr
error[E0599]: the method `__check_generic_fun` exists for struct `InnerProps<bool>`, but its trait bounds were not satisfied
  --> tests/view/10_generic_prop_wrong_type_short_form.rs:13:36
   |
13 |             <Inner concrete_i32=42 generic_fun>
   |                                    ^^^^^^^^^^^ method cannot be called on `InnerProps<bool>` due to unsatisfied trait bounds
...
20 | #[component]
   | ------------ method `__check_generic_fun` not found for this struct
   |
note: the following trait bounds were not satisfied:
      `bool: Fn<()>`
      `bool: FnOnce<()>`
  --> tests/view/10_generic_prop_wrong_type_short_form.rs:27:8
   |
20 | #[component]
   | ------------
...
27 |     F: Fn() -> bool,
   |        ^^^^^^^^^^^^
   |        |       |
   |        |       unsatisfied trait bound introduced here
   |        unsatisfied trait bound introduced here
